--- a/0821_취업특강.md
+++ b/0821_취업특강.md
@@ -1,6 +1,9 @@
 # 1학기 과정
 ## 7월 : 직업심리검사 , 이해와 활용
 ## 8월 : sw진로설계 및 구직정보 탐색
+## 9월 : 이력서/자소서 작성법(입문)
+## 10월 : 이력서/자소서 작성법(기초)
+## 11월 : 면접 전형의 이해
 
 ### Part 1 
 - SW산업분야의 이해
